# Intelligent-Detection-and-Monitoring-Platform

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  main_simple.py
app/api/v1/: graphql_api.py  monitoring.py  router.py  sensors.py
app/core/: config.py  database.py
app/ml/: anomaly_detection.py
app/models/: sensor.py
app/services/: kafka_service.py  redis_service.py
k8s/: deployment.yaml  kafka.yaml  namespace.yaml  redis.yaml
scripts/: dev_start.sh  init_db.py
tests/: conftest.py  test_monitoring.py  test_sensors.py
